<resources>
    <string name="app_name">Simple Diary</string>
    <string name="diary_list">Diary List</string>
    <string name="diary_add">Diary Add</string>
    <string name="itemName">Item name</string>
    <string name="diary_note_text">Note text</string>
    <string name="diaryDate">Diary Date</string>
    <string name="story_title">Story Title</string>
    <string name="story">Story</string>
    <string name="save_story">Add story</string>
    <string name="story_title_text">My story of the day</string>
    <string name="story_title_hint">Enter the name of your story</string>
    <string name="timer">Timer</string>
    <string name="new_story">Add new Story</string>
    <string name="update_story">Update Story</string>
    <string name="timer_text">Timer functionality not yet implemented</string>
    <string name="send_email">Send by e-mail</string>
    <string name="save_image">Save Image</string>
    <string name="image_title_text">Image name</string>
    <string name="image_title_hint">Name your image card</string>
    <string name="image_title">Image name</string>
    <string name="image_note">Image note</string>
    <string name="new_image">Add new Image</string>

</resources>