<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddImage">

    <TextView
        android:id="@+id/imageTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/item_text_margin"
        android:text="@string/image_title"
        android:textSize="@dimen/item_name_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/imageTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageTitleText"
        tools:hint="@string/image_title_hint"
        tools:text="@string/image_title_text" />

    <TextView
        android:id="@+id/imageNoteText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/item_text_margin"
        android:text="@string/image_note"
        android:textSize="@dimen/item_name_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/updateImageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageTitle"
        app:layout_constraintVertical_bias="0.75" />

    <EditText
        android:id="@+id/imageNoteContent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/updateImageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageNoteText" />

    <Button
        android:id="@+id/updateImageButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/save_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imagePlaceholder"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/imageNoteText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageTitle"
        app:srcCompat="@android:drawable/ic_input_add" />


</androidx.constraintlayout.widget.ConstraintLayout>